//////////////////////////////////////////////////////
// USERS (ADMIN)
//////////////////////////////////////////////////////
Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique]
  password varchar
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
// HERO SECTION
//////////////////////////////////////////////////////
Table heroes {
  id bigint [pk, increment]
  title varchar
  subtitle text
  image varchar
  button_text varchar
  button_link varchar
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
// BENEFITS (STATIC CMS)
//////////////////////////////////////////////////////
Table benefits {
  id bigint [pk, increment]
  title varchar
  icon varchar
  status boolean
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
// PRODUCTS
//////////////////////////////////////////////////////
Table products {
  id bigint [pk, increment]
  name varchar
  slug varchar [unique]
  short_description text
  description text
  image varchar
  status boolean
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
// PRODUCT PRICES (1 PRODUCT MANY PRICES)
//////////////////////////////////////////////////////
Table product_prices {
  id bigint [pk, increment]
  product_id bigint
  package_name varchar
  type varchar // single | bundle
  price decimal(12,2)
  created_at timestamp
  updated_at timestamp
}

Ref: product_prices.product_id > products.id

//////////////////////////////////////////////////////
// GALLERY
//////////////////////////////////////////////////////
Table galleries {
  id bigint [pk, increment]
  image varchar
  title varchar
  description text
  status boolean
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
// TESTIMONIALS
//////////////////////////////////////////////////////
Table testimonials {
  id bigint [pk, increment]
  customer_name varchar
  occupation varchar
  rating int
  review text
  photo varchar
  featured boolean
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
// TEAM
//////////////////////////////////////////////////////
Table teams {
  id bigint [pk, increment]
  name varchar
  position varchar
  photo varchar
  instagram varchar
  linkedin varchar
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
// PARTNERS
//////////////////////////////////////////////////////
Table partners {
  id bigint [pk, increment]
  name varchar
  logo varchar
  website varchar
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
// BUSINESS SETTINGS (KEY-VALUE)
//////////////////////////////////////////////////////
Table settings {
  id bigint [pk, increment]
  key varchar [unique]
  value text
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
// SALES (MANUAL INPUT ADMIN)
//////////////////////////////////////////////////////
Table sales {
  id bigint [pk, increment]
  transaction_date date
  customer_name varchar
  total_amount decimal(12,2)
  notes text
  created_by bigint
  created_at timestamp
  updated_at timestamp
}

Ref: sales.created_by > users.id

//////////////////////////////////////////////////////
// SALES ITEMS
//////////////////////////////////////////////////////
Table sales_items {
  id bigint [pk, increment]
  sale_id bigint
  product_id bigint
  product_name varchar
  qty int
  price decimal(12,2)
  subtotal decimal(12,2)
  created_at timestamp
  updated_at timestamp
}

Ref: sales_items.sale_id > sales.id
Ref: sales_items.product_id > products.id